# binance-kline-scanner

./: .gitignore  CLAUDE.md  README.md  build.py  install.sh  klines_seq_detector.py  pyproject.toml  scan_symbols.txt  scanner.py  test_klines_seq_detector.py  test_scanner.py  version.py
.github/workflows/: ci.yml  release.yml
