[project]
name = "binance-kline-scanner"
version = "0.1.1"
description = "Screen Binance USD-M futures for fresh N-large-same-color candle impulses"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "nuitka>=4.1.2",
    "ruff>=0.15.18",
    "zstandard>=0.25.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
# test files are runnable scripts: compact `assert; print; ok += 1` lines and short loop vars
"test_*.py" = ["E401", "E702", "E741"]
